--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -7,7 +7,7 @@
     method="post"
   >
     <div class="hidden">
-      {{.CSRFField}}
+      {{ csrfField }}
     </div>
     <div class="mb-4">
       <label for="email" class="block text-sm font-medium text-gray-600 mb-1"
